--- a/package.json
+++ b/package.json
@@ -4,5 +4,20 @@
   "main": "index.js",
   "repository": "https://github.com/VodichY/mo_less2.git",
   "author": "VodzichY <yuri.vodich@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.31",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
+  },
+  "scripts": {
+    "dev": "nodemon src/server.ts",
+    "dev:debug": "nodemon --inspect src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
+  }
 }
