--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "uuid-int": "^3.1.0"
   }
 }
