--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/express-validator": "^3.0.0",
     "@types/node": "^17.0.31",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "express": "^4.18.1",
+    "express-validator": "^6.14.0",
     "uuid-int": "^3.1.0"
   }
 }
