--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "express-validator": "^6.14.0",
+    "js-base64": "^3.7.2",
     "uuid-int": "^3.1.0"
   }
 }
