--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.0",
     "js-base64": "^3.7.2",
+    "mongodb": "^4.7.0",
     "uuid-int": "^3.1.0"
   }
 }
